#38: Update circuit domain model to support multi-qubit gates.
Change qubit-gate relation from 1:n to m:n.
Domain model is now much more similar to the metamodel.